# vpl

./: .gitignore  CMakeLists.txt  README.md
include/vpl/: binary_tree.h  deque.h  deque_ll.h  doubly_linkedlist.h  dynamic_array.h  linked_list.h  queue.h  queue_ll.h  stack.h  stack_ll.h  util.h
include/vpl/helpers/: binary_tree_helpers.h
src/: binary_tree.c  deque.c  deque_ll.c  doubly_linkedlist.c  dynamic_array.c  linked_list.c  queue.c  queue_ll.c  stack.c  stack_ll.c
src/helpers/: binary_tree_helpers.c
tests/: test_binary_tree.c  test_deque.c  test_deque_ll.c  test_doubly_linkedlist.c  test_dynamic_array.c  test_linked_list.c  test_queue.c  test_queue_ll.c  test_stack.c  test_stackll.c
